@@ -2,10 +2,8 @@ package com.pasan.medifinder.cloud.oauth.service.config;
 
 import com.pasan.medifinder.cloud.oauth.service.entities.AuthGrantedAuthority;
 import com.pasan.medifinder.cloud.oauth.service.entities.AuthUserDetails;
-import com.pasan.medifinder.cloud.oauth.service.entities.Client;
 import com.pasan.medifinder.cloud.oauth.service.repositories.AuthGrantedAuthorityRepository;
 import com.pasan.medifinder.cloud.oauth.service.repositories.AuthUserDetailsRepository;
-import com.pasan.medifinder.cloud.oauth.service.repositories.ClientRepository;
 import com.pasan.medifinder.cloud.oauth.service.services.JpaRegisteredClientRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,7 +24,6 @@ import java.util.*;
 @Configuration
 public class DBInitializerConfig {
     private final Logger logger = LoggerFactory.getLogger(DBInitializerConfig.class);
-
     private final JpaRegisteredClientRepository clientRepository;
     private final AuthUserDetailsRepository userDetailsRepository;
     private final AuthGrantedAuthorityRepository grantedAuthorityRepository;
@@ -50,7 +47,7 @@ public class DBInitializerConfig {
 
             if (messageClientRegistered == null) {
                 logger.info("CREATE NEW CLIENT [MESSAGING-CLIENT]");
-                RegisteredClient registeredClient = RegisteredClient.withId("1")
+                RegisteredClient registeredClient = RegisteredClient.withId(UUID.randomUUID().toString())
                         .clientId("messaging-client")
                         .clientSecret(passwordEncoder.encode("secret"))
                         .clientName("messaging-client")
@@ -67,6 +64,7 @@ public class DBInitializerConfig {
                         .clientSettings(ClientSettings.builder().requireAuthorizationConsent(true).build())
                         .build();
 
+                logger.debug("CLIENT CREATED [MESSAGING-CLIENT] : {}", registeredClient);
                 clientRepository.save(registeredClient);
             }
         };
@@ -79,32 +77,39 @@ public class DBInitializerConfig {
             Optional<AuthUserDetails> defaultUserOptional = userDetailsRepository.findByUsername("admin");
 
             if (defaultUserOptional.isEmpty()) {
+                logger.debug("CREATE DEFAULT ADMIN USER");
                 AuthUserDetails userDetails = new AuthUserDetails();
                 userDetails.setUsername("admin");
                 userDetails.setPassword(passwordEncoder.encode("123456"));
                 userDetails.setEnabled(true);
+                userDetails = userDetailsRepository.save(userDetails);
 
-                Optional<AuthGrantedAuthority> grantedAuthorityOptional = grantedAuthorityRepository.findByAuthority("read");
+                AuthGrantedAuthority readGrantedAuthority = this.createGrantedAuthority("read", userDetails);
+                AuthGrantedAuthority writeGrantedAuthority = this.createGrantedAuthority("write", userDetails);
+                grantedAuthorityRepository.save(readGrantedAuthority);
+                grantedAuthorityRepository.save(writeGrantedAuthority);
 
-                if (grantedAuthorityOptional.isEmpty()) {
-                    AuthGrantedAuthority grantedAuthority = new AuthGrantedAuthority();
-                    grantedAuthority.setAuthority("read");
-                    grantedAuthority.setAuthUserDetails(userDetails);
-
-                    userDetails = userDetailsRepository.save(userDetails);
-                    userDetails.setAuthorities(Collections.singleton(grantedAuthority));
-
-                    grantedAuthorityRepository.save(grantedAuthority);
-                    userDetailsRepository.save(userDetails);
-                } else {
-                    AuthGrantedAuthority grantedAuthority = grantedAuthorityOptional.get();
-                    grantedAuthority.setAuthUserDetails(userDetails);
-                    userDetails.setAuthorities(Collections.singleton(grantedAuthority));
-
-                    grantedAuthorityRepository.save(grantedAuthority);
-                    userDetailsRepository.save(userDetails);
-                }
+                userDetails.setAuthorities(Set.of(readGrantedAuthority, writeGrantedAuthority));
+                userDetailsRepository.save(userDetails);
+                logger.debug("DEFAULT ADMIN USER CREATED {}", userDetails);
             }
         };
+    }
+
+    private AuthGrantedAuthority createGrantedAuthority(String authority, AuthUserDetails userDetails) {
+        logger.info("GRANTED AUTHORITY {}", authority);
+        Optional<AuthGrantedAuthority> grantedAuthorityOptional = grantedAuthorityRepository.findByAuthority(authority);
+        AuthGrantedAuthority grantedAuthority;
+        if (grantedAuthorityOptional.isEmpty()) {
+            logger.debug("CREATE GRANTED AUTHORITY {}", authority);
+            grantedAuthority = new AuthGrantedAuthority();
+            grantedAuthority.setAuthority(authority);
+        } else {
+            logger.debug("GRANTED AUTHORITY EXISTS {}", authority);
+            grantedAuthority = grantedAuthorityOptional.get();
+        }
+        grantedAuthority.setAuthUserDetails(userDetails);
+        logger.debug("GRANTED AUTHORITY {}", grantedAuthority);
+        return grantedAuthority;
     }
 }
